welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:14: error: ';' expected but 'else' found.
     else return false 
     ^