welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    // Write your code here
    if (estFaceMur()==true){
       	return false
    	}
     else {
           if (getCouleurSol()==Color.green){
     	
     	 return true
     	
           }
           avance();
     else return false 
    
    
}        }
